--- a/index.html
+++ b/index.html
@@ -116,8 +116,11 @@
            .checktoberfest-events:hover .checktoberfest-events__overlay:after {
                opacity: 0.75;
            }
-           .checktoberfest-events {
+           .checktoberfest-events-dus {
                background-image: url('https://secure.meetupstatic.com/photos/event/4/f/9/e/600_515900382.webp?w=384');
+           }
+           .checktoberfest-events-agb {
+               background-image: url('https://secure.meetupstatic.com/photos/event/5/9/7/600_516121431.webp?w=384');
            }
            .event-date-title {
                color: white;
@@ -559,7 +562,7 @@
    <input id="panel-1-ctrl"
           class="panel-radios" type="radio" name="tab-radios" checked>
    <input id="panel-2-ctrl"
-          class="panel-radios" type="radio" name="tab-radios" disabled>
+          class="panel-radios" type="radio" name="tab-radios">
    <input id="panel-3-ctrl"
           class="panel-radios" type="radio" name="tab-radios" disabled>
    <input id="panel-4-ctrl"
@@ -583,7 +586,7 @@
        </li><!--INLINE-BLOCK FIX
  --><li id="li-for-panel-2">
        <label class="panel-label"
-              for="panel-2-ctrl">Hamburg</label>
+              for="panel-2-ctrl">Augsburg</label>
    </li><!--INLINE-BLOCK FIX
  --><li id="li-for-panel-3">
        <label class="panel-label"
@@ -591,7 +594,7 @@
    </li><!--INLINE-BLOCK FIX
  --><li id="li-for-panel-4">
        <label class="panel-label"
-              for="panel-4-ctrl">Augsburg</label>
+              for="panel-4-ctrl">Hamburg</label>
    </li><!--INLINE-BLOCK FIX
  --><li id="li-for-panel-5" class="last">
        <label class="panel-label"
@@ -610,7 +613,7 @@
                         <p>Heinrich-Heine-Allee 53<br>40213 Düsseldorf<br>4th level</p>
                    </div>
                    <div class="checktoberfest-events-gallery">
-                       <div class="checktoberfest-events">
+                       <div class="checktoberfest-events checktoberfest-events-dus">
                            <div class="checktoberfest-events__overlay">
                                <h2 class="checktoberfest-events__title">CHECKTOBERFEST 1/4</h2>
                                <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/web-engineering-duesseldorf/events/296148432/">Meetup</a>
@@ -618,7 +621,7 @@
                            <p class="event-date-title">THU, OCT 5, 2023 5:00 PM</p>
                        </div>
 
-                       <div class="checktoberfest-events">
+                       <div class="checktoberfest-events checktoberfest-events-dus">
                            <div class="checktoberfest-events__overlay">
                                <h2 class="checktoberfest-events__title">CHECKTOBERFEST 2/4</h2>
                                <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/web-engineering-duesseldorf/events/296148781/">Meetup</a>
@@ -626,7 +629,7 @@
                            <p class="event-date-title">THU, OCT 12, 2023 5:00 PM</p>
                        </div>
 
-                       <div class="checktoberfest-events">
+                       <div class="checktoberfest-events checktoberfest-events-dus">
                            <div class="checktoberfest-events__overlay">
                                <h2 class="checktoberfest-events__title">CHECKTOBERFEST 3/4</h2>
                                <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/web-engineering-duesseldorf/events/296148808/">Meetup</a>
@@ -634,7 +637,7 @@
                            <p class="event-date-title">THU, OCT 19, 2023 5:00 PM</p>
                        </div>
 
-                       <div class="checktoberfest-events">
+                       <div class="checktoberfest-events checktoberfest-events-dus">
                            <div class="checktoberfest-events__overlay">
                                <h2 class="checktoberfest-events__title">CHECKTOBERFEST 4/4</h2>
                                <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/web-engineering-duesseldorf/events/296148822/">Meetup</a>
@@ -645,9 +648,21 @@
                </main>
            </section>
            <section id="panel-2">
-               <main>
-                   <h1>tbd</h1>
-               </main>
+            <main>
+                <div>
+                    <p class="title">Location</p>
+                     <p>Viktoriastraße 7<br>86150 Augsburg<br>2th level</p>
+                </div>
+                <div class="checktoberfest-events-gallery">
+                    <div class="checktoberfest-events checktoberfest-events-agb">
+                        <div class="checktoberfest-events__overlay">
+                            <h2 class="checktoberfest-events__title">CHECKTOBERFEST</h2>
+                            <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/check-it-augsburg/events/296332343/">Meetup</a>
+                        </div>
+                        <p class="event-date-title">THU, OCT 12, 2023 5:30 PM</p>
+                    </div>
+                </div>
+            </main>
            </section>
            <section id="panel-3">
                <main>
