Add previous events

--- a/index.html
+++ b/index.html
@@ -610,14 +610,6 @@
                    <div class="checktoberfest-events-gallery">
                        <div class="checktoberfest-events checktoberfest-events-dus">
                            <div class="checktoberfest-events__overlay">
-                               <h2 class="checktoberfest-events__title">CHECKTOBERFEST 2/4</h2>
-                               <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/web-engineering-duesseldorf/events/296148781/">Meetup</a>
-                           </div>
-                           <p class="event-date-title">THU, OCT 12, 2023 5:00 PM</p>
-                       </div>
-
-                       <div class="checktoberfest-events checktoberfest-events-dus">
-                           <div class="checktoberfest-events__overlay">
                                <h2 class="checktoberfest-events__title">CHECKTOBERFEST 3/4</h2>
                                <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/web-engineering-duesseldorf/events/296148808/">Meetup</a>
                            </div>
@@ -645,6 +637,14 @@
                            </div>
                            <p class="event-date-title">THU, OCT 5, 2023 5:00 PM</p>
                        </div>
+
+                       <div class="checktoberfest-events checktoberfest-events-dus previous-event">
+                           <div class="checktoberfest-events__overlay">
+                               <h2 class="checktoberfest-events__title">CHECKTOBERFEST 2/4</h2>
+                               <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/web-engineering-duesseldorf/events/296148781/">Meetup</a>
+                           </div>
+                           <p class="event-date-title">THU, OCT 12, 2023 5:00 PM</p>
+                       </div>
                    </div>
                </main>
            </section>
@@ -654,8 +654,14 @@
                     <p class="title">Location</p>
                      <p>Viktoriastraße 7<br>86150 Augsburg<br>2th level</p>
                 </div>
+                <div class="checktoberfest-events-gallery"></div>
+
+                <hr>
+
                 <div class="checktoberfest-events-gallery">
-                    <div class="checktoberfest-events checktoberfest-events-agb">
+                    <p class="title">Previous events</p>
+
+                    <div class="checktoberfest-events checktoberfest-events-agb previous-event">
                         <div class="checktoberfest-events__overlay">
                             <h2 class="checktoberfest-events__title">CHECKTOBERFEST</h2>
                             <a class="checktoberfest-events__link" target="_blank" href="https://www.meetup.com/de-DE/check-it-augsburg/events/296332343/">Meetup</a>
