Fix mobile styling

--- a/hacktoberfest.html
+++ b/hacktoberfest.html
@@ -83,14 +83,8 @@
                    max-height: 46px;
                    opacity: 1;
                }
-               #panel-1-ctrl:checked ~ #tabs-list #li-for-panel-1 label.panel-label {
-                   background-color: white;
-                   color: #063773;
-                   background-color: #063773;
-                   color: white;
-               }
-               #panels .container {
-                   width: 100%;
+               #panels {
+                   width: 180%;
                }
                #panels section header {
                    display: block;
@@ -115,6 +109,9 @@
                    color: #063773;
                    padding-top: 26px;
                }
+               #panels .container {
+                   width: 100%;
+               }
                #panel-1-ctrl:checked ~ #tabs-list #li-for-panel-1 label.panel-label::after {
                    height: 6px;
                }
@@ -124,6 +121,7 @@
                    width: 80%;
                    margin: 0 auto;
                }
+
            }
            .panel-radios {
                position: fixed;
