--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
                    background-color: #063773;
                    color: white;
                }
-               #panels .container {
-                   width: 100%;
+               #panels {
+                   width: 180%;
                }
                #panels section header {
                    display: block;
